# delta-kernel-rs

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  about-list-by-crate.hbs  about.toml  architecture.md  justfile
acceptance/: Cargo.toml  README.md  build.rs
acceptance/src/: data.rs  lib.rs  meta.rs
acceptance/tests/: dat_reader.rs  other.rs
derive-macros/: Cargo.toml
derive-macros/src/: lib.rs
ffi/: .clang-format  .gitignore  Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  cffi-test.c  kernel.h  kernel.hpp
ffi-proc-macros/: Cargo.toml
ffi-proc-macros/src/: lib.rs
ffi/examples/read-table/: .clang-format  CMakeLists.txt  README.md  arrow.c  arrow.h  compile_commands.json  expression.h  expression_test_results.txt  kernel_utils.c  kernel_utils.h  read_table.c  read_table.h  schema.h  test_expr.c  write_table.c
ffi/examples/visit-expression/: CMakeLists.txt  expression.h  expression_print.h  visit_expr.c  visit_expression.c
ffi/src/: engine_data.rs  engine_funcs.rs  engine_interface_funcs.rs  error.rs  expression.rs  expressions.rs  ffi_tracing.rs  handle.rs  lib.rs  scan.rs  schema.rs  test_ffi.rs
ffi/src/expressions/: engine.rs  kernel.rs  kernel_expr_visitor.rs  mod.rs
ffi/tests/invalid-handle-code/: double-mut-reference.rs  double-mut-reference.stderr  moved-from-handle.rs  moved-from-handle.stderr  mut-clone-handle.rs  mut-clone-handle.stderr  not-send.rs  not-send.stderr  private-constructor.rs  private-constructor.stderr  shared-as-mut.rs  shared-as-mut.stderr  shared-not-sync.rs  shared-not-sync.stderr
ffi/tests/read-table-testing/: run_test.sh
ffi/tests/test-expression-visitor/: expected.txt
ffi/tests/test_expression_visitor/: expected.txt  run_test.sh
integration-tests/: Cargo.toml  test-all-arrow-versions.sh
integration-tests/src/: main.rs
kernel/: Cargo.toml  build.rs
kernel/examples/change_data/: Cargo.toml  generate_table_with_cdf_dv.py
kernel/examples/change_data_feed/: Cargo.toml
kernel/examples/dump-table/: Cargo.toml
kernel/examples/inspect-table/: Cargo.toml
kernel/examples/read-table-changes/: Cargo.toml
kernel/examples/read-table-multi-threaded/: Cargo.toml  README.md
kernel/examples/read-table-single-threaded/: Cargo.toml  README.md
kernel/examples/read_table_changes/: Cargo.toml
kernel/src/: arrow_conversion.rs  column_mapping.rs  columnar_batch.rs  config.rs  data_batch.rs  data_item.rs  engine_data.rs  error.rs  expressions.rs  group_iterator.rs  grouping_iterator.rs  lib.rs  log_segment.rs  path.rs  schema.rs  snapshot.rs  table.rs  table_changes.rs  table_properties.rs  test_util.rs  transaction.rs  txn.rs  url_util.rs  utils.rs
kernel/src/actions/: action_definitions.rs  deletion_vector.rs  mod.rs  schemas.rs  set_transaction.rs  transaction.rs  types.rs  visitors.rs
kernel/src/client/: arrow.rs  arrow_conversion.rs  arrow_data.rs  arrow_expression.rs  arrow_utils.rs  conversion.rs  executor.rs  expression.rs  file_handler.rs  filesystem.rs  json.rs  mod.rs  parquet.rs  util.rs
kernel/src/engine/: arrow_conversion.rs  arrow_data.rs  arrow_expression.rs  arrow_footer_skipping.rs  arrow_get_data.rs  arrow_utils.rs  ensure_data_types.rs  mod.rs  parquet_row_group_skipping.rs  parquet_stats_skipping.rs
kernel/src/expressions/: column_name.rs  column_names.rs  mod.rs  rewrite.rs  scalars.rs
kernel/src/features/: column_mapping.rs  constraints.rs  mod.rs
kernel/src/ffi/: mod.rs
kernel/src/grouping_iterators/: version_grouping_iterator.rs
kernel/src/log_segment/: mod.rs  tests.rs
kernel/src/predicates/: mod.rs  parquet_stats_skipping.rs  tests.rs
kernel/src/scan/: data_skipping.rs  file_stream.rs  log_replay.rs  mod.rs  state.rs  table_change_scan.rs
kernel/src/simple_client/: data.rs  fs_client.rs  get_data.rs  get_data_item.rs  json.rs  mod.rs  parquet.rs
kernel/src/table_changes/: data_read.rs  log_replay.rs  metadata_scanner.rs  mod.rs  physical_to_logical.rs  replay_scanner.rs  resolve_dvs.rs  scan.rs  scan_file.rs  schema_compat.rs  state.rs  table_changes_scan.rs
kernel/src/table_features/: column_mapping.rs  mod.rs
kernel/src/table_properties/: deserialize.rs
kernel/tests/: cdf.rs  dv.rs  golden_tables.rs  hdfs.rs  read.rs  write.rs
kernel/tests/common/: mod.rs
kernel/tests/data/: cdf-table-backtick-column-names.tar.zst  cdf-table-conditional-delete-all-rows.tar.zst  cdf-table-data-change.tar.zst  cdf-table-delete-conditional-all-rows.tar.zst  cdf-table-delete-conditional-two-rows.tar.zst  cdf-table-delete-unconditional.tar.zst  cdf-table-non-partitioned.tar.zst  cdf-table-partitioned.tar.zst  cdf-table-simple.tar.zst  cdf-table-update-ops.tar.zst  cdf-table-with-cdc-and-dvs.tar.zst  cdf-table-with-dv.tar.zst  cdf-table.tar.zst  oussama_cdf.tar.zst
kernel/tests/golden_data/: 124-decimal-decode-bug.tar.zst  125-iterator-bug.tar.zst  basic-decimal-table-legacy.tar.zst  basic-decimal-table.tar.zst  basic-with-inserts-deletes-checkpoint.tar.zst  basic-with-inserts-merge.tar.zst  basic-with-inserts-overwrite-restore.tar.zst  basic-with-inserts-updates.tar.zst  basic-with-vacuum-protocol-check-feature.tar.zst  canonicalized-paths-normal-a.tar.zst  canonicalized-paths-normal-b.tar.zst  canonicalized-paths-special-a.tar.zst  canonicalized-paths-special-b.tar.zst  checkpoint.tar.zst  corrupted-last-checkpoint-kernel.tar.zst  data-reader-absolute-paths-escaped-chars.tar.zst  data-reader-array-complex-objects.tar.zst  data-reader-array-primitives.tar.zst  data-reader-date-types-America.tar.zst  data-reader-date-types-Asia.tar.zst  data-reader-date-types-Etc.tar.zst  data-reader-date-types-Iceland.tar.zst  data-reader-date-types-Jst.tar.zst  data-reader-date-types-Pst.tar.zst  data-reader-date-types-utc.tar.zst  data-reader-escaped-chars.tar.zst  data-reader-map.tar.zst  data-reader-nested-struct.tar.zst  data-reader-partition-values.tar.zst  (+60 more)
python/: Cargo.toml  test.py
python/src/: lib.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
variant/: Cargo.toml
variant/src/: error.rs  json.rs  lib.rs  reader.rs  utils.rs
(+196 files in other folders)
