[package]
name = "acceptance"
publish = false
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
arrow-array = { version = "^49.0" }
arrow-ord = { version = "^49.0" }
arrow-select = { version = "^49.0" }
arrow-schema = { version = "^49.0" }
delta_kernel = { path = "../kernel", features = ["default-client", "developer-visibility"] }
futures = "0.3"
object_store = "^0.8.0"
parquet = { version = "^49.0" , features = ["object_store"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"

[build-dependencies]
ureq = "2.2"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
datatest-stable = "0.2"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tempfile = "3"
test-case = { version = "3.1.0" }
tokio = { version = "1" }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }

[[test]]
name = "dat_reader"
harness = false
