[package]
name = "delta_kernel_derive"
description = "Derive macros for delta_kernel"
documentation = "https://docs.rs/delta_kernel_derive"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"


