[package]
name = "delta_kernel_ffi_macros"
description = "Procedural macros for delta_kernel_ffi"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2.0", features = ["extra-traits", "full"] }
quote = "1.0"
