[package]
name = "delta_kernel_ffi"
description = "Provide C FFI bindings for the delta_kernel crate"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
build = "build.rs"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tracing = "0.1"
url = "2"
delta_kernel = { path = "../kernel", default-features = false, features = [
  "developer-visibility",
] }
delta_kernel_ffi_macros = { path = "../ffi-proc-macros", version = "0.3.0" }

# used if we use the default engine to be able to move arrow data into the c-ffi format
arrow-schema = { version = "^52.0", default-features = false, features = [
  "ffi",
], optional = true }
arrow-data = { version = "^52.0", default-features = false, features = [
  "ffi",
], optional = true }
arrow-array = { version = "^52.0", default-features = false, optional = true }

[build-dependencies]
cbindgen = "0.26.0"
libc = "0.2.147"

[dev-dependencies]
rand = "0.8.5"
trybuild = "1.0"

[features]
default = ["default-engine"]
default-engine = [
  "delta_kernel/default-engine",
  "arrow-array",
  "arrow-data",
  "arrow-schema",
]
sync-engine = ["delta_kernel/sync-engine"]
developer-visibility = []
