[package]
name = "delta_kernel_ffi"
description = "Provide C FFI bindings for the delta_kernel crate"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true
build = "build.rs"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tracing = "0.1"
tracing-core = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = [ "json" ] }
url = "2"
delta_kernel = { path = "../kernel", default-features = false, features = [
  "developer-visibility",
] }
delta_kernel_ffi_macros = { path = "../ffi-proc-macros", version = "0.6.0" }

# used if we use the default engine to be able to move arrow data into the c-ffi format
arrow-schema = { version = "53.0", default-features = false, features = [
  "ffi",
], optional = true }
arrow-data = { version = "53.0", default-features = false, features = [
  "ffi",
], optional = true }
arrow-array = { version = "53.0", default-features = false, optional = true }

[build-dependencies]
cbindgen = "0.27.0"
libc = "0.2.158"

[dev-dependencies]
delta_kernel = { path = "../kernel", features = ["default-engine", "sync-engine"] }
object_store = { workspace = true }
rand = "0.8.5"
test_utils = { path = "../test-utils" }
tokio = { version = "1.40" }
trybuild = "1.0"

[features]
default = ["default-engine"]
cloud = ["delta_kernel/cloud"]
default-engine = [
  "delta_kernel/default-engine",
  "arrow-array",
  "arrow-data",
  "arrow-schema",
]
tracing = [ "tracing-core", "tracing-subscriber" ]
sync-engine = ["delta_kernel/sync-engine"]
developer-visibility = []
test-ffi = []
