[package]
name = "deltakernel"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
arrow-array = { version = "^49.0" }
arrow-select = { version = "^49.0" }
bytes = "1.4"
chrono = { version = "0.4" }
either = "1.8"
fix-hidden-lifetime-bug = "0.2"
itertools = "0.12"
lazy_static = "1.4"
regex = "1.8"
roaring = "0.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# only for structured logging
tracing = "0.1"
url = "2"
uuid = { version = "1.3.0", features = ["v4"] }
z85 = "3.0.5"

# used for developer-visibility
visibility = "0.1.0"

# Used in default client
arrow-arith = { version = "^49.0", optional = true }
arrow-cast = { version = "^49.0", optional = true }
arrow-json = { version = "^49.0", optional = true }
arrow-ord = { version = "^49.0", optional = true }
arrow-schema = { version = "^49.0", optional = true }
futures = { version = "0.3", optional = true }
object_store = { version = "^0.8.0", optional = true }
parquet = { version = "^49.0", optional = true, features = [
  "async",
  "object_store",
] }

# optionally used with default client (though not required)
tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }
arrow = { version = "^49.0", features = [
  "json",
  "prettyprint",
  "test_utils",
], optional = true }
rand = { version = "0.8", optional = true }

[features]
default = ["default-client"]
default-client = [
  "arrow-arith",
  "arrow-cast",
  "arrow-json",
  "arrow-ord",
  "arrow-schema",
  "futures",
  "object_store",
  "parquet",
]
developer-visibility = []
test-utils = ["arrow", "default-client", "rand", "serde"]
serde = []

[dev-dependencies]
arrow = { version = "^49.0", features = ["json", "prettyprint"] }
deltakernel = { path = ".", features = ["tokio", "test-utils"] }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tempfile = "3"
test-case = { version = "3.1.0" }
tokio = { version = "1" }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
