[package]
name = "delta_kernel"
description = "Core crate providing a Delta/Deltalake implementation focused on interoperability with a wide range of query engines."
documentation = "https://docs.rs/delta_kernel"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
bytes = "1.4"
chrono = { version = "0.4" }
either = "1.8"
fix-hidden-lifetime-bug = "0.2"
indexmap = "2.2.1"
itertools = "0.13"
lazy_static = "1.4"
roaring = "0.10.1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "1"
# only for structured logging
tracing = { version = "0.1", features = ["log"] }
url = "2"
uuid = "1.3.0"
z85 = "3.0.5"

# bring in our derive macros
delta_kernel_derive = { path = "../derive-macros", version = "0.3.0" }

# used for developer-visibility
visibility = "0.1.0"

# Used in default engine
arrow-array = { workspace = true, optional = true, features = ["chrono-tz"] }
arrow-select = { workspace = true, optional = true }
arrow-arith = { workspace = true, optional = true }
arrow-cast = { workspace = true, optional = true }
arrow-json = { workspace = true, optional = true }
arrow-ord = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }
object_store = { workspace = true, optional = true }
hdfs-native-object-store = { workspace = true, optional = true }
# Used in default and sync engine
parquet = { workspace = true, optional = true }
# Used for fetching direct urls (like pre-signed urls)
reqwest = { version = "^0.12.0", optional = true }
strum = { version = "0.26", features = ["derive"] }


# optionally used with default engine (though not required)
tokio = { version = "1.39", optional = true, features = ["rt-multi-thread"] }

# Used in integration tests
hdfs-native = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }

[features]
arrow-conversion = ["arrow-schema"]
arrow-expression = ["arrow-arith", "arrow-array", "arrow-ord", "arrow-schema"]
cloud = [
  "object_store/aws",
  "object_store/azure",
  "object_store/gcp",
  "object_store/http",
  "hdfs-native-object-store",
]
default = ["sync-engine"]
default-engine = [
  "arrow-conversion",
  "arrow-expression",
  "arrow-array",
  "arrow-cast",
  "arrow-json",
  "arrow-schema",
  "arrow-select",
  "futures",
  "object_store",
  "parquet/async",
  "parquet/object_store",
  "reqwest",
  "tokio",
]

developer-visibility = []
sync-engine = [
  "arrow-cast",
  "arrow-conversion",
  "arrow-expression",
  "arrow-array",
  "arrow-json",
  "arrow-select",
  "parquet",
]
integration-test = [
  "hdfs-native-object-store/integration-test",
  "hdfs-native",
  "walkdir",
]

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
arrow = { workspace = true, features = ["json", "prettyprint"] }
delta_kernel = { path = ".", features = ["default-engine", "sync-engine"] }
paste = "1.0"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tempfile = "3"
tar = "0.4"
zstd = "0.13"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
