[package]
name = "dump-table"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arrow = { version = "^49.0" }
clap = { version = "^4.4", features = ["derive"] }
comfy-table = "7.1.0"
deltakernel = { path = "../../../kernel", features = [
  "default-client",
  "tokio",
  "developer-visibility",
] }
env_logger = "0.11.3"
url = "2"

