[package]
name = "inspect-table"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arrow-array = { version = "^49.0" }
arrow-schema = { version = "^49.0" }
clap = { version = "^4.4", features = ["derive"] }
delta_kernel = { path = "../../../kernel", features = [
  "default-client",
  "tokio",
  "developer-visibility",
] }
env_logger = "0.11.3"
url = "2"
