[package]
name = "inspect-table"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
delta_kernel = { path = "../../../kernel", features = [
  "default",
  "tokio",
  "developer-visibility",
] }
clap = { version = "^4.4", features = ["derive"] }
url = "2"
