[package]
name = "read-table-multi-threaded"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arrow = { version = "^49.0", features = ["prettyprint", "chrono-tz"] }
clap = { version = "^4.4", features = ["derive"] }
delta_kernel = { path = "../../../kernel", features = [
  "default-client",
  "tokio",
  "developer-visibility",
] }
env_logger = "0.11.3"
itertools = "0.12.1"
spmc = "0.3.0"
url = "2"

