[package]
name = "read-table-multi-threaded"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arrow = { version = "^51.0", features = ["prettyprint"] }
clap = { version = "^4.4", features = ["derive"] }
delta_kernel = { path = "../../../kernel", features = [
  "default-engine",
  "tokio",
  "developer-visibility",
] }
env_logger = "0.11.3"
itertools = "0.13"
spmc = "0.3.0"
url = "2"
