[package]
name = "read-table-multi-threaded"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arrow = { workspace = true, features = ["prettyprint", "chrono-tz"] }
clap = { version = "4.5", features = ["derive"] }
delta_kernel = { path = "../../../kernel", features = [
  "cloud",
  "default-engine",
  "sync-engine",
  "developer-visibility",
] }
env_logger = "0.11.5"
itertools = "0.13"
spmc = "0.3.0"
url = "2"
